Changed theme colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,65 +9,65 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Custom palette colors -->
-    <color name="seed">#4B5A20</color>
-    <color name="md_theme_light_primary">#506601</color>
+    <color name="seed">#189AB4</color>
+    <color name="md_theme_light_primary">#00687A</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#D1EE81</color>
-    <color name="md_theme_light_onPrimaryContainer">#161F00</color>
-    <color name="md_theme_light_secondary">#5B6147</color>
+    <color name="md_theme_light_primaryContainer">#ADECFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001F26</color>
+    <color name="md_theme_light_secondary">#4B6269</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#DFE6C4</color>
-    <color name="md_theme_light_onSecondaryContainer">#181E09</color>
-    <color name="md_theme_light_tertiary">#39665F</color>
+    <color name="md_theme_light_secondaryContainer">#CEE7EF</color>
+    <color name="md_theme_light_onSecondaryContainer">#061F25</color>
+    <color name="md_theme_light_tertiary">#575C7E</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#BCECE2</color>
-    <color name="md_theme_light_onTertiaryContainer">#00201C</color>
+    <color name="md_theme_light_tertiaryContainer">#DEE1FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#131937</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FEFCF4</color>
-    <color name="md_theme_light_onBackground">#1B1C17</color>
-    <color name="md_theme_light_surface">#FEFCF4</color>
-    <color name="md_theme_light_onSurface">#1B1C17</color>
-    <color name="md_theme_light_surfaceVariant">#E3E4D3</color>
-    <color name="md_theme_light_onSurfaceVariant">#46483C</color>
-    <color name="md_theme_light_outline">#76786B</color>
-    <color name="md_theme_light_inverseOnSurface">#F3F1E9</color>
-    <color name="md_theme_light_inverseSurface">#30312C</color>
-    <color name="md_theme_light_inversePrimary">#B6D168</color>
+    <color name="md_theme_light_background">#FBFCFD</color>
+    <color name="md_theme_light_onBackground">#191C1D</color>
+    <color name="md_theme_light_surface">#FBFCFD</color>
+    <color name="md_theme_light_onSurface">#191C1D</color>
+    <color name="md_theme_light_surfaceVariant">#DBE4E7</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F484B</color>
+    <color name="md_theme_light_outline">#70797C</color>
+    <color name="md_theme_light_inverseOnSurface">#EFF1F2</color>
+    <color name="md_theme_light_inverseSurface">#2E3132</color>
+    <color name="md_theme_light_inversePrimary">#56D6F5</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#506601</color>
-    <color name="md_theme_light_outlineVariant">#C6C8B8</color>
+    <color name="md_theme_light_surfaceTint">#00687A</color>
+    <color name="md_theme_light_outlineVariant">#BFC8CB</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#B6D168</color>
-    <color name="md_theme_dark_onPrimary">#283500</color>
-    <color name="md_theme_dark_primaryContainer">#3B4D00</color>
-    <color name="md_theme_dark_onPrimaryContainer">#D1EE81</color>
-    <color name="md_theme_dark_secondary">#C3CAA9</color>
-    <color name="md_theme_dark_onSecondary">#2D331C</color>
-    <color name="md_theme_dark_secondaryContainer">#434931</color>
-    <color name="md_theme_dark_onSecondaryContainer">#DFE6C4</color>
-    <color name="md_theme_dark_tertiary">#A1D0C6</color>
-    <color name="md_theme_dark_onTertiary">#023731</color>
-    <color name="md_theme_dark_tertiaryContainer">#204E47</color>
-    <color name="md_theme_dark_onTertiaryContainer">#BCECE2</color>
+    <color name="md_theme_dark_primary">#56D6F5</color>
+    <color name="md_theme_dark_onPrimary">#003641</color>
+    <color name="md_theme_dark_primaryContainer">#004E5D</color>
+    <color name="md_theme_dark_onPrimaryContainer">#ADECFF</color>
+    <color name="md_theme_dark_secondary">#B2CBD3</color>
+    <color name="md_theme_dark_onSecondary">#1D343A</color>
+    <color name="md_theme_dark_secondaryContainer">#334A51</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CEE7EF</color>
+    <color name="md_theme_dark_tertiary">#BFC4EB</color>
+    <color name="md_theme_dark_onTertiary">#292E4D</color>
+    <color name="md_theme_dark_tertiaryContainer">#3F4565</color>
+    <color name="md_theme_dark_onTertiaryContainer">#DEE1FF</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1B1C17</color>
-    <color name="md_theme_dark_onBackground">#E4E3DB</color>
-    <color name="md_theme_dark_surface">#1B1C17</color>
-    <color name="md_theme_dark_onSurface">#E4E3DB</color>
-    <color name="md_theme_dark_surfaceVariant">#46483C</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C6C8B8</color>
-    <color name="md_theme_dark_outline">#909284</color>
-    <color name="md_theme_dark_inverseOnSurface">#1B1C17</color>
-    <color name="md_theme_dark_inverseSurface">#E4E3DB</color>
-    <color name="md_theme_dark_inversePrimary">#506601</color>
+    <color name="md_theme_dark_background">#191C1D</color>
+    <color name="md_theme_dark_onBackground">#E1E3E4</color>
+    <color name="md_theme_dark_surface">#191C1D</color>
+    <color name="md_theme_dark_onSurface">#E1E3E4</color>
+    <color name="md_theme_dark_surfaceVariant">#3F484B</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BFC8CB</color>
+    <color name="md_theme_dark_outline">#899295</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1D</color>
+    <color name="md_theme_dark_inverseSurface">#E1E3E4</color>
+    <color name="md_theme_dark_inversePrimary">#00687A</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#B6D168</color>
-    <color name="md_theme_dark_outlineVariant">#46483C</color>
+    <color name="md_theme_dark_surfaceTint">#56D6F5</color>
+    <color name="md_theme_dark_outlineVariant">#3F484B</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
