--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -30,6 +30,8 @@
         <action
             android:id="@+id/action_tripsFragment_self"
             app:destination="@id/tripsFragment"
+            app:popUpTo="@id/tripsFragment"
+            app:popUpToInclusive="true"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
