--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -20,8 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_email_layout"
-        app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout"
-        app:layout_constraintHorizontal_chainStyle="packed">
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -40,11 +40,11 @@
         app:errorEnabled="true"
         app:counterEnabled="true"
         app:counterMaxLength="@integer/max_surname_text_length"
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_name_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_email_confirm_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_name_layout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -67,7 +67,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_password_layout"
-        app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
         app:layout_constraintHorizontal_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -87,6 +86,7 @@
         app:errorEnabled="true"
         app:counterEnabled="true"
         app:counterMaxLength="@integer/max_email_text_length"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_password_confirm_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_email_layout"
@@ -114,7 +114,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/registration_button"
         app:layout_constraintTop_toBottomOf="@+id/registration_email_layout"
-        app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintHorizontal_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -135,6 +134,7 @@
         app:counterEnabled="true"
         app:counterMaxLength="@integer/max_password_text_length"
         app:endIconMode="password_toggle"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
         app:layout_constraintBottom_toTopOf="@+id/cancel_registration_button"
@@ -155,7 +155,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="@string/registration_button"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_registration_button"
         app:layout_constraintTop_toBottomOf="@+id/registration_password_layout"
         app:layout_constraintEnd_toStartOf="@+id/cancel_registration_button"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -168,6 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="@string/registration_cancel"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_button"
         app:layout_constraintEnd_toEndOf="@id/registration_password_confirm_layout"
         app:layout_constraintStart_toEndOf="@+id/registration_button"
         app:layout_constraintTop_toBottomOf="@+id/registration_password_confirm_layout"
